# Praktika

./: exception.py  main.py  pyproject.toml
weather_bot/: main.py
